--- a/index.html
+++ b/index.html
@@ -3,104 +3,66 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Sameh 1st Personal Site</title>
+  <title>Sameh Ahmed Al Adli</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon (3).ico">
+  <link href="https://fonts.googleapis.com/css?family=Crafty+Girls|Merriweather|Montserrat|Sacramento" rel="stylesheet">
 </head>
 
 <body>
-  <table cellspacing="5">
-    <tr>
-      <td><img src="sameh.jpeg" alt="Sameh Picture"></td>
-      <td><h1>Sameh Al Adli</h1>
-      <p><em>Engineer, Web Developer and founder of <strong><a href="https://www.instagram.com/3dreamanimation/">3Dream Animation</a></strong></em></p>
-      <p>I am an engineer and recently plan to shift my career and become a web developer</p></td>
-    </tr>
-  </table>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <h1>I'm Sameh</h1>
+    <p class="web">A web <span class="dev">developer</span></p>
+    <p class="web">and</p>
+    <p class="web">Graphics <span class="dev">designer</span></p>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="mountain-img">
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img src="https://media.giphy.com/media/bcKmIWkUMCjVm/giphy.gif" alt="hello-img">
+      <h2>Hello.</h2>
+      <p>I am a web designer and developer, i'm the founder of <a href="https://www.instagram.com/3dreamanimation"><em>3Dream Animation</em></a></p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="html-img" src="https://image.flaticon.com/icons/svg/136/136528.svg" alt="html-img">
+        <img class="CSS-img" src="https://image.flaticon.com/icons/svg/136/136527.svg" alt="CSS-img">
+        <h3>Web Develope</h3>
+        <p>I love web development, i can develope your site as you want using the latest technologires and tools.</p>
+        <p>I have good knowledge of HTML, CSS and bootstrap.</p>
+      </div>
+      <div class="skill-row">
+        <img class="after-effects" src="https://image.flaticon.com/icons/svg/552/552226.svg" alt="AE-img">
+        <img class="illustrator" src="https://image.flaticon.com/icons/svg/552/552222.svg" alt="Ai-img">
+        <img class="premier" src="https://image.flaticon.com/icons/svg/552/552225.svg" alt="Pr-img">
+        <h3>Graphics Design</h3>
+        <p>I can edit videos, make 2D and 3D motion videos and logo designs using pouplar softwares like Adobe(Afte Effects, Illustrator, Premier and Cinema4D)</p>
+        <p>Also i have skills in Vissual Effects(VFX) using Nuke like compositing, 2D/3D tracking and camera tracking.</p>
+        <p>You can check my portfolio by <a href="https://samehaladli.artstation.com/">clicking here</a> </p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Avialable for freelance work</h3>
+      <p>If you need my help in web development or graphics work feel free to contact me for freelance work</p>
+      <a class="btn" href="mailto:sameh.aladly@gmail.com">CONTACT ME</a>
+    </div>
+  </div>
   <hr>
-  <h3>Education</h3>
-  <ul>
-    <li>B.Sc. in Electronics and Communications Engineering, <em><a href="http://sha.edu.eg/">Shorouk Academy</a></em> class of 2008, Final Grade: Pass</li>
-    <li>The Complete 2019 Web Development Bootcamp(<em>January 2019</em>)</li>
-  </ul>
-  <hr>
-  <h3>My Hobbies</h3>
-  <ul>
-    <li>Swimming</li>
-    <li>Video Games
-      <ol>
-        <li>FIFA</li>
-        <li>Fortnite</li>
-      </ol>
-    </li>
-    <li>Streaming
-      <ol>
-        <li><a href="https://www.youtube.com/channel/UCgXIgZ1oEG8VglrI_X1OJug?view_as=subscriber">Youtube</a></li>
-        <li><a href="https://www.twitch.tv/egyptiankingfn">Twitch</a></li>
-      </ol>
-    </li>
-  </ul>
-  <hr>
-  <h3>Work Experience</h3>
-  <table cellspacing="5">
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Work</th>
-        <th>Company</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td><em>2009-2010</em></td>
-        <td>Civil Site Engineer</td>
-        <td>SIAT NIL for telecommunication</td>
-      </tr>
-      <tr>
-        <td><em>2010-2012</em></td>
-        <td>Telecom Site Engineer</td>
-        <td>SIAT NIL for telecommunication</td>
-      </tr>
-      <tr>
-        <td><em>2012-2015</em></td>
-        <td>Network Engineer</td>
-        <td>ALABDULLATIF Group</td>
-      </tr>
-      <tr>
-        <td><em>2015-Present</em></td>
-        <td>Operation Engineer</td>
-        <td>Orange Egypt(Outsourced)</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-  <table>
-    <tr>
-      <td>Networking</td>
-      <td>🌟🌟🌟🌟🌟</td>
-    </tr>
-    <tr>
-      <td>Adobe After Effects</td>
-      <td>🌟🌟🌟🌟</td>
-    </tr>
-    <tr>
-      <td>Cinema 4D</td>
-      <td>🌟🌟🌟🌟</td>
-    </tr>
-    <tr>
-      <td>Nuke</td>
-      <td>🌟🌟🌟🌟</td>
-    </tr>
-    <tr>
-      <td>AutoDesk VRED Pro</td>
-      <td>🌟🌟🌟🌟🌟</td>
-    </tr>
-  </table>
-  <hr>
-  <center>
-    <button class="favorit styled" type="button"><a href="Contact Me.html">Contact Me</a></button>
-    <button class="favorit styled" type="button"><a href="https://www.linkedin.com/in/sameh-al-adli-0b1bab80/">My LinkedIn</a></button>
-    <button class="favorit styled" type="button"><a href="https://samehaladli.artstation.com/">My ArtStation Portfolio</a></button>
-  </center>
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/sameh-al-adli-0b1bab80/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/SamehAdli">Twitter</a>
+    <a class="footer-link" href="https://www.instagram.com/samehadli">Instagram</a>
+    <p>© 2019 Sameh Ahmed.</p>
+    <p>Icon made by <a href="https://www.flaticon.com/authors/freepik">Freepik</a> from <a href="https://www.flaticon.com">www.flaticon.com</a></p>
+  </div>
+
 </body>
 
 </html>
