--- a/index.html
+++ b/index.html
@@ -49,18 +49,18 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>Avialable for freelance work</h3>
-      <p>If you need my help in web development or graphics work feel free to contact me for freelance work</p>
+      <p class="freelance">If you need my help in web development or graphics work feel free to contact me for freelance work</p>
       <a class="btn" href="mailto:sameh.aladly@gmail.com">CONTACT ME</a>
     </div>
   </div>
-  <hr>
+
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/sameh-al-adli-0b1bab80/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/SamehAdli">Twitter</a>
     <a class="footer-link" href="https://www.instagram.com/samehadli">Instagram</a>
-    <p>© 2019 Sameh Ahmed.</p>
-    <p>Icon made by <a href="https://www.flaticon.com/authors/freepik">Freepik</a> from <a href="https://www.flaticon.com">www.flaticon.com</a></p>
+    <p class="samehahmed">© 2019 Sameh Ahmed.</p>
+    <p class="icon">Icon made by <a class="icon-made-by"href="https://www.flaticon.com/authors/freepik">Freepik</a> from <a class="icon-made-by" href="https://www.flaticon.com">www.flaticon.com</a></p>
   </div>
 
 </body>
